fix: increase contrast on icons hover

--- a/src/catppuccin.scss
+++ b/src/catppuccin.scss
@@ -59,7 +59,7 @@
     --sidebar-spacer: #{map.get($colors, "overlay0")};
     --scrollbar: #{map.get($colors, "overlay0")};
     --icons: #{map.get($colors, "overlay0")};
-    --icons-hover: #{map.get($colors, "overlay1")};
+    --icons-hover: #{map.get($colors, "overlay2")};
     --links: #{map.get($colors, "blue")};
     --inline-code-color: #{map.get($colors, "text")};
     --theme-popup-bg: #{map.get($colors, "mantle")};
